--- a/AI game/AI game.vcxproj.filters
+++ b/AI game/AI game.vcxproj.filters
@@ -18,10 +18,10 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\Desktop\probot\uttt.h">
+    <ClInclude Include="uttt.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\Desktop\probot\utttbot.h">
+    <ClInclude Include="utttbot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -29,13 +29,13 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\Desktop\probot\uttt.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\Desktop\probot\utttbot.cpp">
+    <ClCompile Include="uttt.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\Desktop\probot\main.cpp">
+    <ClCompile Include="utttbot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
